# Movies-and-TVSeries-Stuff

./: .gitignore  .vercelignore  IMDB-TVSeries.ipynb  MovieFestivals.ipynb  PROMPTS.md  README.md  pyproject.toml  tv_series_ratings.ipynb  tv_series_ratings.py
api/: index.py
docs/: index.html
