[project]
name = "tv-series-ratings"
version = "0.1.0"
description = "Plot IMDb episode ratings for TV series"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "ipython>=8.0.0",
    "jupyter>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
